--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -27,7 +27,8 @@ concurrency:
 
 jobs:
   tina:
-  - name: Build TinaCMS
+  runs-on: ubuntu-latest
+    - name: TINA
     env:
       CLIENT_ID: ${{ secrets.TINA_PUBLIC_CLIENT_ID }}
       TINA_TOKEN: ${{ secrets.TINA_TOKEN }}
