--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -27,12 +27,13 @@ concurrency:
 
 jobs:
   tina:
-  runs-on: ubuntu-latest
-    - name: TINA
-    env:
-      CLIENT_ID: ${{ secrets.TINA_PUBLIC_CLIENT_ID }}
-      TINA_TOKEN: ${{ secrets.TINA_TOKEN }}
-      run: ${{ steps.detect-package-manager.outputs.runner }} tinacms build
+    runs-on: ubuntu-latest
+    steps:
+      - name: pepa
+        env:
+          CLIENT_ID: ${{ secrets.TINA_PUBLIC_CLIENT_ID }}
+          TINA_TOKEN: ${{ secrets.TINA_TOKEN }}
+        run: ${{ steps.detect-package-manager.outputs.runner }} tinacms build
   # Build job
   build:
     runs-on: ubuntu-latest
